--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ li.nav-item {
     
       .nav-link.active {box-shadow: inset 0 3px 0 0 #5b64fc; background: #f5f5f5;  color:#5b64fc}
     
-      .reports-area {margin:55px 0 0; }
+      .reports-area {margin:/*55px 0 0*/ 0; }
     
     
       .fixed-top-bar {   background-color: #ffffff;    box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.12); height:40px}
