--- a/style.css
+++ b/style.css
@@ -103,48 +103,52 @@ ul, ol {
 
 .report-element-header .dropdown-menu,.reports-area .dropdown-menu {margin-left: -155px !important; }
 
+/*GORKEM*/
+.tab-content{
+  width: 100%;
+}
 
 li.nav-item {
-    
+
         margin: 0 !important;
         padding: 0 !important;
-    
+
         color: #5b64fc !important;}
-    
-    
+
+
     .nav-tabs {border-bottom: 1px solid #ddd}
         .nav-tabs > li > a:hover {background: #f5f5f5 !important;; box-shadow: inset 0 3px 0 0 #5b64fc}
       /* dashboards specified */
-    
+
       /* .dashboards {padding-left:0} */
       .nav-item:hover,
       .nav-item.active,
       .fixed-top-bar ul.dashboards li.active,
       .fixed-top-bar ul.dashboards li:hover {  background: #f5f5f5 !important;   box-shadow: inset 0 3px 0 0 #5b64fc !important;   color: #5b64fc !important;}
       /* dashboards specified */
-    
+
       .nav-link.active {box-shadow: inset 0 3px 0 0 #5b64fc; background: #f5f5f5;  color:#5b64fc}
-    
+
       .reports-area {margin:/*55px 0 0*/ 0; }
-    
-    
+
+
       .fixed-top-bar {   background-color: #ffffff;    box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.12); height:40px}
-    
+
       .fixed-top-bar ul {margin: 0; padding: 0}
-    
+
       .nav-item,.fixed-top-bar span.button-holder, .fixed-top-bar ul li {list-style: none; float: left; padding: 11px 18px 13px 18px; cursor:pointer}
       .fixed-top-bar span.button-holder, .fixed-top-bar ul li span {  font-size: 13px;    font-weight: 500;    text-align: left;  }
       .reports-container {margin-top:28px; margin-left:15px}
-    
-    
+
+
       /* will be fixed */
-    
-    
+
+
       .top-related-actions {margin-right:20px !important}
        .top-related-actions li {  font-size: 13px !important;    font-weight: 500 !important;    text-align: left !important;    color: #000000 ; font-weight: bold}
-    
+
       .navlink.active, .top-related-actions li.active {border-top:3px solid #5b64fc !important; color:#5b64fc !important;}
-    
+
       .btn-add-report-elem {
         position: fixed;
         bottom: 20px;
@@ -158,10 +162,10 @@ li.nav-item {
         box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
         color:#fff
       }
-    
-    
+
+
       .nav-tabs > li > a { margin-right:0; line-height: auto;border:none; border-radius: 0 0 0 0  !important  ;font-size: 13px; color:#000}
-    
+
     .dash-actions {
         width: auto;
         font-size: 13px;
@@ -173,7 +177,7 @@ li.nav-item {
         display: inline-block;
         z-index: 1000;
     }
-    
+
     .dash-actions li:hover {
         background: #f5f5f5;
         box-shadow: inset 0 3px 0  0 #5b64fc;
@@ -191,54 +195,56 @@ li.nav-item {
         color: #000000;
         cursor: pointer;
     }
-    
+
     .dash-actions li i{
         display: inline-block;
         margin-right: 6px;
     }
-    
+
     .dashboards {
         padding: 0;
         margin: 0;
     }
-    
+
     .content{background:#f1f1f1;    padding-right: 0;   }
-    .nav-tabs {width: 100%;    position: fixed;    z-index: 999; background:#fff}
-    
-    
-    
+    .nav-tabs {width: 100%;
+      /*GORKEM position: fixed;*/
+      z-index: 999; background:#fff}
+
+
+
     .spinner {
         margin: 100px auto 0;
         width: 70px;
         text-align: center;
       }
-    
+
       .spinner > div {
         width: 18px;
         height: 18px;
         background-color: #5b64fc;
-    
+
         border-radius: 100%;
         display: inline-block;
         -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
         animation: sk-bouncedelay 1.4s infinite ease-in-out both;
       }
-    
+
       .spinner .bounce1 {
         -webkit-animation-delay: -0.32s;
         animation-delay: -0.32s;
       }
-    
+
       .spinner .bounce2 {
         -webkit-animation-delay: -0.16s;
         animation-delay: -0.16s;
       }
-    
+
       @-webkit-keyframes sk-bouncedelay {
         0%, 80%, 100% { -webkit-transform: scale(0) }
         40% { -webkit-transform: scale(1.0) }
       }
-    
+
       @keyframes sk-bouncedelay {
         0%, 80%, 100% {
           -webkit-transform: scale(0);
@@ -248,14 +254,14 @@ li.nav-item {
           transform: scale(1.0);
         }
       }
-    
-    
-    
+
+
+
       aside {height: 100vh}
-    
+
       .dropdown-menu li:hover, .toolbox-element-value:hover{background: none !important}
-    
-    
+
+
       .progress-holder{
         height: 20px;
         margin-bottom: 20px;
@@ -269,18 +275,18 @@ li.nav-item {
         height: 100%;
         transition: all 0.4s cubic-bezier(0.8, 0, 0.5, 1);
     }
-    
+
 
     .navbar .nav-head .btn-menu { color:#fff}
-    
+
     .report-element-content table {margin-left:0px !important}
-    
+
     .report-element-body-outer > div > div > div { position:absolute !important; width:100% !important; height:83% !important}
-    
-    
+
+
     /* .wg-grid-overlay .wg-preview-item.wg-preview-highlight { background-color: inherit !important } */
-    
+
     .wg-widget-content { overflow:unset !important}
-    
-    
+
+
     .dropdown-toggle .icon-more {    width: 40px;    height: 20px;    display: inline-block;    text-align: center; box-shadow:none !important}
