--- a/style.css
+++ b/style.css
@@ -290,3 +290,30 @@ li.nav-item {
 
 
     .dropdown-toggle .icon-more {    width: 40px;    height: 20px;    display: inline-block;    text-align: center; box-shadow:none !important}
+
+
+
+
+    .navbar {    background-color: #3a3c46;    border-radius: 0 0 0 0;    position: relative;
+        min-height: 50px;margin-bottom: 20px;border: 1px solid transparent;}
+    
+    .navbar .nav-head { padding: 12px 15px}
+    
+    aside { height:100vh}
+    .navbar .nav-head .logo{max-width: 70%;}
+    .admin-settings .menu-toggler {     background: none;    border: 0}
+    .admin-settings {    height: 50px;    padding: 16px 20px;    color: #fff; }
+    .tab-headers { border-bottom:1px solid #ddd; height:40px; background:#fff; box-shadow : 1px 1px 2px 0 rgba(0, 0, 0, 0.12)}
+    .editor-panel {     height: 100vh;    overflow-y: scroll;    overflow-x: hidden;    padding: 0;}
+    
+    li.tab.active a,
+    .vue-tabs .nav-pills > li.active > a, .vue-tabs .nav-pills > li.active > a:hover, .vue-tabs .nav-pills > li.active > a:focus,
+    .nav-pills li.tab a:hover,
+    .nav-pills li.tab a.active_tab {  border-radius:0px;  box-shadow: inset 0 3px 0 0 #5b64fc;    background: #f5f5f5;    color: #5b64fc;}
+    
+    
+    
+    .vue-tabs .nav-pills > li + li { margin-left:0}
+    
+    .nav-pills li.tab a {     margin-right: 0;    line-height: inherit;    border: none;    border-radius: 0 0 0 0 !important;
+        font-size: 13px;    color: #000;    line-height: 1.42857143; position: relative;    display: block;    padding: 10px 15px;}
