--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ ICOMOON SET */
     -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+    outline: 0!important
+}
+
 .icon-minus:before { content: "\e900"; }
 .icon-search:before { content: "\e901"; }
 .icon-settings:before { content: "\e902"; }
