--- a/style.css
+++ b/style.css
@@ -53,7 +53,12 @@ ICOMOON SET */
   background: #fff!important;
   padding: 20px 0 20px 20px!important;
 }
-
+.fullscreen {
+  background: #f1f1f1!important
+}
+.btn--add {
+  cursor: pointer
+}
 thead th {
   verical-align: bottom;
   background: #d3d3d3 !important;
@@ -475,7 +480,7 @@ span.button-holder,
 }
 
 body {
-  height: 100vsadasdh;
+  /* height: 100vsadasdh; */
   overflow: hidden;
   background: #f1f1f1
 }
