--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ span.button-holder,
 }
 
 .action--area {
-  background: #33353e;
-  height: 40px;
+  background: #33353e!important;
+  line-height: 60px;
 }
 
 .filterDefinitionLabel {
@@ -149,7 +149,6 @@ span.button-holder,
 .action--btn {
   color: #fff;
   font-size: 13px;
-  margin-top: 12px;
   display: block;
   cursor: pointer;
   opacity: 0.85;
@@ -832,12 +831,6 @@ li.nav-item {
   }
 }
 
-
-
-aside {
-  height: 100vh
-}
-
 .dropdown-menu li:hover,
 .toolbox-element-value:hover {
   background: none !important
@@ -859,7 +852,6 @@ aside {
   transition: all 0.4s cubic-bezier(0.8, 0, 0.5, 1);
 }
 
-
 .navbar .nav-head .btn-menu {
   color: #fff
 }
@@ -874,14 +866,11 @@ aside {
   height: 83% !important
 }
 
-
-
 /* .wg-grid-overlay .wg-preview-item.wg-preview-highlight { background-color: inherit !important } */
 
 .wg-widget-content {
   overflow: unset !important
 }
-
 
 .dropdown-toggle .icon-more {
   width: 40px;
@@ -891,8 +880,10 @@ aside {
   box-shadow: none !important
 }
 
-
-
+.sidebarLinks i {
+  font-size: 13px!important;
+  margin-right: 10px;
+}
 
 .navbar {
   background-color: #3a3c46;
@@ -907,8 +898,9 @@ aside {
   padding: 12px 15px
 }
 
-aside {
-  height: 100vh
+aside.navbar {
+  height: 100vh;
+  position: relative;
 }
 
 .navbar .nav-head .logo {
@@ -922,8 +914,12 @@ aside {
 
 .admin-settings {
   height: 50px;
-  padding: 16px 20px;
+  padding: 16px 20px 16px 35px;
   color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .tab-headers {
@@ -969,4 +965,215 @@ li.tab.active a,
   position: relative;
   display: block;
   padding: 10px 15px;
+}
+
+.global-filters li{
+  padding: 1em;
+  height: 50px;
+  background-color: #ffffff;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
+  margin-bottom: 1px
+}
+.global-filters li .name {
+  font-size: 15px;
+  color:#000;
+}
+.global-filters li ._label {
+  font-size: 13px;
+  color:#000;
+}
+
+.global-filters.is-pointer li {
+  cursor: pointer
+}
+.global-filters h2 {
+  margin-bottom: 20px
+}
+
+.global-filters span.title:not(:first-of-type) {
+  margin-top: 20px;
+}
+.global-filters span.title {
+  display: block;
+  padding: .6em 0;
+  font-size: 18px;
+}
+
+
+
+.mapperNav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2.4em
+}
+
+.mapperNav h3 {
+  margin: 0;
+  padding: 0
+}
+
+.mapperNav a {
+  color: #000000!important
+}
+
+.checkbox-item .text {
+  color: #000;
+  font-size: 14px;
+  font-weight: normal;
+  margin-right: 10px;
+  position: relative;
+  transition: all 300ms;
+  cursor: pointer
+}
+.checkbox-item .text i {
+  position: absolute;
+  width: 12px;
+  height: 7px;
+  border-bottom: 2px solid #fff;
+  border-left: 2px solid #fff;
+  right: 4px;
+  top: 4px;
+  color: #fff;
+  z-index: 99;
+  font-size: 11px;
+  transform: rotate(-40deg)
+}
+.checkbox-item .text::after {
+  content: '';
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border-radius: 2px;
+  background-color: #ffffff;
+  border: solid 1px #bbbbbb;
+  vertical-align: top;
+  margin-left: 10px;
+  position: relative;
+  transition: all 300ms
+}
+.checkbox-item input:checked ~ span.text i {
+  border-color: #fff
+}
+.checkbox-item input:checked ~ span.text::after {
+  background: #432fc2;
+  border-color: #432fc2
+}
+.checkbox-item input:checked ~ span.text {
+  color: #432fc2
+}
+.checkbox-item {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 20px;
+}
+.checkbox-item input {
+  display: none
+}
+
+.ace-monokai {
+  background: #3a3d46!important
+}
+
+.ace_layer.ace_gutter-layer.ace_folding-enabled {
+  background: #24262c!important
+}
+
+.mapperNav h3 {
+  font-size: 18px;
+}
+
+.popup-area {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 9999999999;
+  background: rgba(0,0,0,.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.popup {
+  padding: 30px 40px;
+  background: #fff;
+  box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 3px;
+  min-width: 520px;
+  position: relative;
+}
+
+.close-icon {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 10px;
+  cursor:pointer;
+  transform: rotate(45deg)
+}
+.input-row {
+  display: block;
+  margin-bottom: 20px;
+  position: relative;
+}
+.input-row:last-child {
+  margin-bottom: 0
+}
+.input-row label{
+  display: block;
+  font-size: 13px;
+  margin-bottom: 5px
+}
+.input-row input,.input-row select, .input-row textarea{
+  display: block;
+  border: 0;
+  width: 100%;
+  height: 40px;
+  font-size: 15px;
+  background-color: #f8f8f8;
+  box-shadow: 1px 1px 2px 0 rgba(0, 0, 0, 0.15);
+  padding: 0 10px
+}
+.input-row input ,.input-row textarea{
+  background-color: #f0f0f0;
+  box-shadow: inset 1px 1px 2px 0 rgba(0, 0, 0, 0.1);
+}
+.input-row textarea {
+  min-height: 100px;
+  padding-top: 10px;
+  min-width: 100%
+}
+.caret {
+  display: block;
+  width: 5px;
+  height: 5px;
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  border: 5px solid transparent;
+  border-top-color:#5b64fc
+}
+
+.input-row select {
+  appearance: none;
+  -moz-appearance: none;
+}
+.input-row button {
+  width: 60%;
+  height: 40px;
+  border: 0;
+  color:#fff;
+  text-align: center;
+  border-radius: 3px;
+  background-color: #5b64fc;
+  box-shadow: 2px 2px 3px 0 rgba(91, 100, 252, 0.3);
+  margin-left: 20%
+}
+
+
+.global-filters .is-passive span{
+  opacity: .5
 }
