--- a/style.css
+++ b/style.css
@@ -1218,7 +1218,7 @@ li.tab.active a,
   width: 40px;
   height: 40px;
   border: 3px solid transparent;
-  border-top-color: #3a3c46;
+  border-top-color: #5b64fc;
   display: block;
   border-radius: 50%;
   -webkit-animation-fill-mode: both;
@@ -1249,5 +1249,44 @@ li.tab.active a,
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+.scrollable {
+  height: 100vh;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.rest-loading {
+  width: calc(100% + 30px);
+  height: 3px;
+  background: rgba(0,0,0,.1);
+  margin: 0 -15px;
+  position: fixed;
+  top: 0px;
+  left: 0;
+  z-index: 999;
+}
+
+
+.rest-loading::after {
+  content: '';
+  display: block;
+  background: #5b64fc;
+  height: 3px;
+  transition: all 300ms;
+  animation: restLoader 1s infinite;
+}
+
+@keyframes restLoader {
+  0% {
+    width: 0%;
+  }
+  50% {
+    width: 20%;
+  }
+  100% {
+    width: 100%;
   }
 }
