--- a/style.css
+++ b/style.css
@@ -1515,7 +1515,7 @@ li.tab.active a,
   margin: 0 -20px;
 }
 
-@media screen and (max-width: 769px) {
+@media screen and (max-width: 1100px) {
   .btn--add {
     display: none!important
   }
@@ -1595,3 +1595,18 @@ li.tab.active a,
     display: flex!important
   }
 }
+@media screen and (min-width: 1440px){
+  .dash-actions li span.icon {
+    display: none
+  }
+}
+
+@media screen and (max-width: 1440px) and (min-width: 1101px) {
+  .dash-actions li span.text {
+    display: none
+  }
+  .dash-actions li span.icon {
+    display: inline-block
+  }
+}
+
