--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ ICOMOON SET */
 .mb-0 {
   margin-bottom: 0px!important;
 }
+.report--design .report-element-wrapper {
+  position: relative;
+  min-height: 130px;
+}
 .report--design .highcharts-container {
   -webkit-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)
@@ -354,12 +358,14 @@ span.button-holder,
 }
 
 .btn--add {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   background: #432fc2;
   color: #fff;
   -webkit-box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
   box-shadow: 2px 2px 10px 0 rgba(108, 6, 225, 0.4);
-  line-height: 40px;
+  min-height: 40px;
   font-size: 15px;
   transition: all 300ms;
   z-index: 99999;
@@ -1621,6 +1627,11 @@ li.tab.active a,
   .dash-actions li:hover span.text {
     display: block
   }
+  .dash-actions li:last-child span.text {
+    right: 0;
+    left: auto;
+    transform: translate(0, 28px);
+  }
   .dash-actions li span.text i {
     display: none
   }
@@ -1629,3 +1640,20 @@ li.tab.active a,
   }
 /* } */
 
+
+
+@media screen and (max-width: 760px) {
+  .table {
+    white-space: nowrap;
+    overflow-x: scroll;
+    width: calc(100vw - 40px);
+  }
+}
+
+.no-shadow {
+  box-shadow: none!important
+}
+
+.btn--add.is-gray {
+  background: #83848a
+}
