--- a/style.css
+++ b/style.css
@@ -41,6 +41,16 @@ ICOMOON SET */
   -webkit-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)
 }
+.is-saved {
+  color: #1ea075;
+  margin-right: 10px;
+  opacity: 0;
+  transition: all 300ms;
+  font-size: 23px
+}
+.is-saved.is-visible {
+  opacity: 1
+}
 .report--design .highcharts-container {
   /* -webkit-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
    box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12) */
@@ -876,6 +886,12 @@ li.nav-item {
   transition: all 0.4s cubic-bezier(0.8, 0, 0.5, 1);
 }
 
+.navbar {
+  min-width: 240px
+}
+.navbar.is-scaled {
+  min-width: auto
+}
 .navbar .nav-head .btn-menu {
   color: #fff
 }
@@ -987,7 +1003,7 @@ li.tab.active a,
   padding: 10px 15px;
 }
 
-.global-filters li{
+.global-filters li {
   padding: 1em;
   height: 50px;
   background-color: #ffffff;
@@ -1095,8 +1111,8 @@ li.tab.active a,
   border-color: #fff
 }
 .checkbox-item input:checked ~ span.text::after {
-  background: #432fc2;
-  border-color: #432fc2
+  background: #5b64fc;
+  border-color: #5b64fc
 }
 .checkbox-item input:checked ~ span.text {
   color: #432fc2
@@ -1109,19 +1125,15 @@ li.tab.active a,
 .checkbox-item input {
   display: none!important
 }
-
 .ace-monokai {
   background: #3a3d46!important
 }
-
 .ace_layer.ace_gutter-layer.ace_folding-enabled {
   background: #24262c!important
 }
-
 .mapperNav h3 {
   font-size: 18px;
 }
-
 .popup-area {
   position: fixed;
   top: 0;
@@ -1135,7 +1147,6 @@ li.tab.active a,
   justify-content: center;
   display: flex;
 }
-
 .popup {
   padding: 30px 40px;
   background: #fff;
@@ -1145,7 +1156,6 @@ li.tab.active a,
   width: 95%;
   position: relative;
 }
-
 .close-icon {
   position: absolute;
   right: 0;
@@ -1618,6 +1628,12 @@ li.tab.active a,
   }
 }
 
+.openDropdownArea {
+  display: block;
+  padding: 5px 10px;
+  margin-left: -15px;
+}
+
 /* @media screen and (max-width: 1440px) and (min-width: 1101px) { */
   .dash-actions li {
     position: relative;
@@ -1651,19 +1667,36 @@ li.tab.active a,
   }
 /* } */
 
-
-
 .report--design .table {
   background: #fff;
   max-width: calc(100% - 30px);
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)
 }
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 768px) {
   .table {
     white-space: nowrap;
     overflow-x: scroll;
     width: calc(100vw - 40px);
+  }
+  .mx-datepicker-top {
+    flex-wrap: wrap!important;
+  }
+  .mx-datepicker-popup.range {
+    width: calc(100vw - 10px)!important
+  }
+  .mx-datepicker-top span {
+    flex-basis: 50%;
+  }
+  .mx-datepicker-top span::after {
+    display: none
+  }
+  .mx-datepicker-popup > div {
+    display: flex!important;
+    flex-direction: column
+  }
+  .mx-datepicker-popup .mx-calendar {
+    width: 100%!important;
   }
 }
 
@@ -1673,4 +1706,62 @@ li.tab.active a,
 
 .btn--add.is-gray {
   background: #83848a
+}
+.is-list-item.item-header .title{
+  margin-top: 0;
+}
+.is-list-item.item-header .labels span.text {
+  margin-right: 33px;
+  font-size: 13px;
+}
+.is-list-item {
+  height: auto!important;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.is-list-item h6 {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  margin: 0;
+  padding: 0
+}
+.is-list-item span.title {
+  font-weight: bold;
+  font-size: 15px;
+}
+.is-list-item h6 svg {
+  margin-right: 10px;
+}
+
+.capitalizeFirstLetter::first-letter {
+  text-transform: uppercase;
+}
+
+.mb-3 {
+  margin-bottom: 30px;
+}
+
+.is-list-item .details {
+  cursor: pointer;
+  color:#000;
+  padding: .3em;
+  display: block
+}
+
+.is-list-item .dropdown-menu {
+  left: auto!important;
+  right: 0!important;
+}
+
+.is-list-item .dropdown-menu li {
+  padding: .3em 0!important;
+  height: auto!important;
+  background-color: #ffffff;
+  box-shadow: none!important;
+  margin-bottom: 0!important
+}
+.is-list-item .dropdown-menu li a:hover {
+  background: #eee!important
 }
