--- a/style.css
+++ b/style.css
@@ -52,12 +52,18 @@ ICOMOON SET */
   transition: all 300ms;
   font-size: 23px
 }
+.align-center {
+  align-items: center
+}
 .is-saved.is-visible {
   opacity: 1
 }
 .report--design .highcharts-container {
   /* -webkit-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
    box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12) */
+}
+.flex {
+  display: flex
 }
 .report--design .filterDefinitionLabel {
   margin-top: 25px;
@@ -71,7 +77,6 @@ ICOMOON SET */
   width: calc(100% - 60px) !important;
   font-size: 20px;
   background: #fff!important;
-  padding: 20px 0 20px 20px!important;
 }
 .fullscreen {
   background: #f1f1f1!important
@@ -1014,6 +1019,44 @@ li.tab.active a,
   }
 }
 
+.report-element--header {
+  position: absolute;
+  top: -35px;
+  left: 0;
+  width: 100%;
+  background: #fff;
+  z-index: 999;
+  padding-bottom: 10px;
+  display: flex;
+}
+.report-element--header .toggleTriggerBox  {
+  position: absolute;
+  right: 0;
+}
+.report-element--header a.dropdown-toggle , .report-element--header .element-title{
+  color: #000;
+  padding-top: 10px!important;
+  display: block;
+  border: 1px dashed transparent;
+}
+.report-element--header input {
+  color: #000;
+  display: block;
+  border: 1px dashed #e7c1c1;
+  padding-bottom: 10px;
+  height: 35px;
+}
+.report-element--header a:not(.dropdown-toggle):hover {
+  background: #f2f2f2 !important
+}
+.report-element--header input,  p {
+  font-style: italic;
+  width: 100%;
+  padding-right: 40px!important
+}
+.report-element-wrapper {
+  padding-top: 35px;
+}
 
 .vue-tabs .nav-pills>li+li {
   margin-left: 0
