--- a/style.css
+++ b/style.css
@@ -1238,9 +1238,13 @@ li.tab.active a,
   height: 50px;
   background-color: #ffffff;
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
-  margin-bottom: 1px
+  margin-bottom: 1px;
+  display: flex
 }
-
+.global-filters.is-table-view li > * {
+  width: 20%!important;
+  display: block
+}
 .global-filters li .name {
   font-size: 15px;
   color: #000;
@@ -1249,6 +1253,11 @@ li.tab.active a,
 .global-filters li ._label {
   font-size: 13px;
   color: #000;
+}
+
+.justify-content-end {
+  display: flex!important;
+  justify-content: flex-end
 }
 
 .global-filters.is-pointer li {
@@ -1548,8 +1557,8 @@ li.tab.active a,
 .global-filters li ._label {
   font-size: 13px;
   color: #000;
+  opacity: .7
 }
-
 
 .loading-nice {
   position: absolute;
