--- a/style.css
+++ b/style.css
@@ -1277,6 +1277,11 @@ li.tab.active a,
   font-size: 18px;
 }
 
+span._title {
+  display: block;
+  padding: .6em 0;
+  font-size: 18px;
+}
 
 
 .mapperNav {
@@ -2183,4 +2188,32 @@ li.tab.active a,
   margin-bottom: 0;
   display: block;
   margin-top: 20px;
+}
+
+.scrollable-item-box {
+  max-height: 580px;
+  overflow-y: scroll;
+  position: relative;
+}
+.has-after-bg {
+  position: relative;
+}
+
+.global-filters.has-after-bg li:last-child {
+  position: relative;
+  z-index: 999
+}
+.has-after-bg::after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 70px;
+  background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+  bottom: 0px;
+  left: 0;
+  z-index: 99
 }
