--- a/style.css
+++ b/style.css
@@ -226,8 +226,9 @@ span.button-holder,
 .top-related-actions li {
   list-style: none;
   float: left;
-  padding: 11px 18px 13px 18px;
+  padding: 9.5px 18px 13px 18px;
   cursor: pointer;
+  transition: all 300ms
 }
 
 .is-hidden {
@@ -774,6 +775,11 @@ li.nav-item {
 }
 
 .navlink.active,
+.top-related-actions li {
+  position: relative;
+  border-top: 3px solid transparent
+}
+.navlink.active,
 .top-related-actions li.active {
   border-top: 3px solid #5b64fc !important;
   color: #5b64fc !important;
@@ -1110,7 +1116,7 @@ li.nav-item {
 }
 
 .navbar {
-  background-color: #3a3c46;
+  background-color: #32343c;
   border-radius: 0 0 0 0;
   position: relative;
   min-height: 50px;
@@ -2049,7 +2055,7 @@ span._title {
 }
 
 .is-list-item.item-header .labels span.text {
-  margin-right: 33px;
+  margin-right: 40px;
   font-size: 13px;
 }
 
