--- a/style.css
+++ b/style.css
@@ -2220,7 +2220,7 @@ span._title {
   content: '';
   display: block;
   position: absolute;
-  width: 100%;
+  width: calc(100% - 15px);
   height: 70px;
   background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
   background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
