--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   background: #f1f1f1;
 }
 
+
 /*****************************************
 ICOMOON SET */
 
@@ -115,6 +116,10 @@ thead th {
   border-bottom: 2px solid #ddd;
   font-size: 10px;
   padding: 8px;
+}
+
+.is-relative {
+  position: relative;
 }
 
 .toggle-checkbox {
@@ -415,15 +420,18 @@ span.button-holder,
   top: -10px!important;
   right: 5px;
 }
+
 .report--design .dropdown-toggle {
   position: absolute;
   top: -39px;
   right: 0;
 }
+
 .report--design .vdp-datepicker__calendar {
   left: 0!important;
   right: auto!important;
 }
+
 
 /*.report--design .toggleTriggerBox {
   display: none
@@ -547,6 +555,7 @@ span.button-holder,
 
 
 
+
 /*Scrollbar*/
 
 ::-webkit-scrollbar {
@@ -664,6 +673,7 @@ ol {
 
 
 
+
 /*GORKEM*/
 
 .tab-content {
@@ -691,6 +701,7 @@ li.nav-item {
 
 
 
+
 /* dashboards specified */
 
 
@@ -704,6 +715,7 @@ li.nav-item {
   box-shadow: inset 0 3px 0 0 #5b64fc !important;
   color: #5b64fc !important;
 }
+
 
 
 
@@ -759,6 +771,7 @@ li.nav-item {
 
 
 
+
 /* will be fixed */
 
 .top-related-actions {
@@ -778,6 +791,7 @@ li.nav-item {
   position: relative;
   border-top: 3px solid transparent
 }
+
 .navlink.active,
 .top-related-actions li.active {
   border-top: 3px solid #5b64fc !important;
@@ -863,6 +877,7 @@ li.nav-item {
 }
 
 
+
 /* page transitions */
 
 .fade-enter-active,
@@ -880,6 +895,7 @@ li.nav-item {
   opacity: 0;
   transform: translateY(12px);
 }
+
 
 
 /* page transitions end */
@@ -1096,6 +1112,7 @@ li.nav-item {
 }
 
 
+
 /* .wg-grid-overlay .wg-preview-item.wg-preview-highlight { background-color: inherit !important } */
 
 .wg-widget-content {
@@ -1184,7 +1201,8 @@ li.tab.active a,
   z-index: 999;
   display: flex;
 }
-.report--design .report-element--header .toggleTriggerBox  {
+
+.report--design .report-element--header .toggleTriggerBox {
   top: 43px;
 }
 
@@ -1214,7 +1232,8 @@ li.tab.active a,
   background: #f2f2f2 !important
 }
 
-.report-element--header input,.report-element--header input p {
+.report-element--header input,
+.report-element--header input p {
   font-style: italic;
   width: 100%;
 }
@@ -1248,10 +1267,12 @@ li.tab.active a,
   margin-bottom: 1px;
   display: flex
 }
-.global-filters.is-table-view li > * {
+
+.global-filters.is-table-view li>* {
   width: 20%!important;
   display: block
 }
+
 .global-filters li .name {
   font-size: 15px;
   color: #000;
@@ -1415,10 +1436,12 @@ span._title {
 .download-img {
   text-align: center;
 }
+
 .download-img img {
   border: 1px solid #ddd!important;
   border-radius: 2px
 }
+
 .popup-area {
   position: fixed;
   top: 0;
@@ -1442,10 +1465,12 @@ span._title {
   width: 95%;
   position: relative;
 }
+
 .popup-area.is-flexible .popup {
   max-width: initial!important;
   width: auto!important;
 }
+
 .close-icon {
   position: absolute;
   right: 0;
@@ -1829,6 +1854,7 @@ span._title {
 }
 
 
+
 /* .navbar {
   transition: all 300ms
 } */
@@ -1980,6 +2006,7 @@ span._title {
 }
 
 
+
 /* @media screen and (max-width: 1440px) and (min-width: 1101px) { */
 
 .dash-actions li {
@@ -2017,6 +2044,7 @@ span._title {
 .dash-actions li span.icon {
   display: inline-block
 }
+
 
 
 /* } */
@@ -2133,6 +2161,7 @@ span._title {
 }
 
 
+
 /* pull grid back */
 
 .vue-grid-layout {
@@ -2188,24 +2217,30 @@ span._title {
 .dash-actions-wrapper.is-in-tab-area {
   margin-bottom: -41px;
 }
+
 .dash-actions-wrapper {
   display: flex;
   justify-content: flex-end;
 }
+
 .vue-grid-layout {
   margin-left: 20px
 }
+
 .mt20 {
   margin-top: 20px;
 }
+
 .tabChores {
   padding: 20px 0 20px 40px;
   font-size: 20px;
   font-weight: bold;
 }
+
 .label.label-primary {
   cursor: pointer
 }
+
 .filterDefinitionLabel {
   font-size: 12px;
   margin-bottom: 0;
@@ -2218,6 +2253,7 @@ span._title {
   overflow-y: scroll;
   position: relative;
 }
+
 .has-after-bg {
   position: relative;
 }
@@ -2226,16 +2262,21 @@ span._title {
   position: relative;
   z-index: 999
 }
+
 .has-after-bg::after {
   content: '';
   display: block;
   position: absolute;
   width: calc(100% - 15px);
   height: 70px;
-  background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+  background: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff', GradientType=0);
+  /* IE6-9 */
   bottom: 0px;
   left: 0;
   z-index: 99
@@ -2278,6 +2319,7 @@ span._title {
   margin: auto;
   width: 80px;
 }
+
 .input-area span {
   width: 120px;
   font-size: 13px;
@@ -2285,12 +2327,14 @@ span._title {
   margin-bottom: 0;
   cursor: pointer;
 }
+
 .input-area {
   display: flex;
-  align-items:  center;
+  align-items: center;
   border-bottom: 1px solid #ddd;
   margin: 0;
 }
+
 .settings-input {
   background: transparent;
   border: 0;
@@ -2313,6 +2357,7 @@ span._title {
   top: 50%;
   transform: translateY(-50%);
 }
+
 .user-nav {
   position: relative;
   margin-bottom: 20px;
