--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
 }
 
 
+
 /*****************************************
 ICOMOON SET */
 
@@ -433,6 +434,7 @@ span.button-holder,
 }
 
 
+
 /*.report--design .toggleTriggerBox {
   display: none
 }*/
@@ -556,6 +558,7 @@ span.button-holder,
 
 
 
+
 /*Scrollbar*/
 
 ::-webkit-scrollbar {
@@ -674,6 +677,7 @@ ol {
 
 
 
+
 /*GORKEM*/
 
 .tab-content {
@@ -702,6 +706,7 @@ li.nav-item {
 
 
 
+
 /* dashboards specified */
 
 
@@ -715,6 +720,7 @@ li.nav-item {
   box-shadow: inset 0 3px 0 0 #5b64fc !important;
   color: #5b64fc !important;
 }
+
 
 
 
@@ -768,6 +774,7 @@ li.nav-item {
 .label.label-default {
   cursor: pointer
 }
+
 
 
 
@@ -878,6 +885,7 @@ li.nav-item {
 
 
 
+
 /* page transitions */
 
 .fade-enter-active,
@@ -895,6 +903,7 @@ li.nav-item {
   opacity: 0;
   transform: translateY(12px);
 }
+
 
 
 
@@ -1110,6 +1119,7 @@ li.nav-item {
   width: 100% !important;
   height: 83% !important
 }
+
 
 
 
@@ -1849,6 +1859,7 @@ span._title {
 
 
 
+
 /* .navbar {
   transition: all 300ms
 } */
@@ -2001,6 +2012,7 @@ span._title {
 
 
 
+
 /* @media screen and (max-width: 1440px) and (min-width: 1101px) { */
 
 .dash-actions li {
@@ -2038,6 +2050,8 @@ span._title {
 .dash-actions li span.icon {
   display: inline-block
 }
+
+
 /* } */
 
 .report--design table:not(.mx-calendar-table) {
@@ -2150,6 +2164,7 @@ span._title {
 .is-list-item .dropdown-menu li a:hover {
   background: #eee!important
 }
+
 
 
 
@@ -2286,7 +2301,7 @@ span._title {
   transition: width .6s;
   z-index: 9999;
   border-radius: 30px!important;
-  transform: translateY(40px) ;
+  transform: translateY(40px);
 }
 
 .progress-bar span {
@@ -2378,9 +2393,11 @@ span._title {
   justify-content: space-between;
   position: relative;
 }
+
 .line-color-set input {
   /*display: none*/
 }
+
 .line-color-set .color-picker-area {
   position: absolute;
   right: 0;
@@ -2392,28 +2409,31 @@ span._title {
   transform-origin: bottom right;
   transition: all 300ms
 }
+
 .line-color-set a {
   text-align: center;
   width: 100px;
   display: block;
   border-radius: 3px;
   padding: .8em 0;
-  color:#fff;
-  text-shadow: 1px 1px rgba(0,0,0,.2);
+  color: #fff;
+  text-shadow: 1px 1px rgba(0, 0, 0, .2);
   cursor: pointer;
-  box-shadow: 0 0 10px rgba(0,0,0,.3);
+  box-shadow: 0 0 10px rgba(0, 0, 0, .3);
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-   -khtml-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-.line-color-set .picker-area input[type="checkbox"]:checked ~ .picker .color-picker-area {
+
+.line-color-set .picker-area input[type="checkbox"]:checked~.picker .color-picker-area {
   opacity: 1!important;
   transform: scale(1);
   visibility: visible;
 }
+
 .line-color-set .picker-area input[type="checkbox"] {
   display: none
 }
