--- a/style.css
+++ b/style.css
@@ -46,9 +46,13 @@ ICOMOON SET */
   min-height: 130px;
   background: #fff;
   margin-right: 30px;
+  margin-bottom: 30px;
+  margin-top: 30px;
   -webkit-box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12)
 }
+
+
 
 .is-saved {
   color: #1ea075;
@@ -86,9 +90,10 @@ ICOMOON SET */
 }
 
 .report--design .report-element--title {
-  width: calc(100% - 60px) !important;
+  width: 100%!important;
   font-size: 20px;
   background: #fff!important;
+  height: 42px;
 }
 
 .fullscreen {
@@ -418,7 +423,7 @@ span.button-holder,
 }
 
 .report--design .dropdown-menu {
-  top: -10px!important;
+  top: 0px!important;
   right: 5px;
 }
 
@@ -995,12 +1000,11 @@ li.nav-item {
   left: 0;
   cursor: pointer;
   top: 10px;
-  background: red;
   transform: translateX(-100%);
   display: flex;
   align-items: center;
   padding: .5em 1em;
-  background: #ececec;
+  background: #e1e1e1;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
@@ -2104,6 +2108,11 @@ span._title {
   margin-top: 0;
 }
 
+.is-list-item .dropdown-menu a {
+  display: block;
+  width: 100%;
+}
+
 .is-list-item.item-header .labels span.text {
   margin-right: 40px;
   font-size: 13px;
@@ -2188,7 +2197,7 @@ span._title {
   right: 0;
   height: calc(100vh - 40px);
   top: 40px;
-  background: #ececec;
+  background: #e1e1e1;
   padding: 2em 1em;
   box-shadow: 1px 2px 4px 0 rgba(0, 0, 0, 0.12);
   z-index: 99999999999;
@@ -2208,7 +2217,10 @@ span._title {
 }
 
 .excel-btn {
-  padding: 4px 20px 10px
+  padding: 4px 20px
+}
+.excel-btn:hover {
+  background: #f2f2f2 
 }
 
 .is-design-nav-wrapper {
@@ -2436,4 +2448,25 @@ span._title {
 
 .line-color-set .picker-area input[type="checkbox"] {
   display: none
+}
+
+.default-loading-circle {
+  display: block;
+  width: 38px;
+  height: 38px;
+  border: 3px solid rgba(0,0,0,.1);
+  border-radius: 50%;
+  border-top-color: #432fc2;
+  margin: 15px auto;
+  transform: scale(0) rotate(0deg);
+  animation: defaultCircleLoading 500ms infinite
+}
+
+@keyframes defaultCircleLoading {
+  0% {
+    transform: scale(1) rotate(0deg)
+  }
+  100% {
+    transform: scale(1) rotate(360deg)
+  }
 }
